# confetti-box

./: .gitignore  Cargo.toml  README.md  Rocket.toml  diesel.toml
confetti-box/: Cargo.toml  build.rs
confetti-box/src/: database.rs  endpoints.rs  lib.rs  main.rs  pages.rs  resources.rs  settings.rs  strings.rs  utils.rs
confetti-box/src/database/: mod.rs  schema.rs
confetti-box/web/: main.css  request.js
confetti-cli/: Cargo.toml
confetti-cli/src/: main.rs
imu/: Cargo.toml
imu/src/: main.rs
migrations/2025-05-22-234448_create_files/: down.sql  up.sql
src/: database.rs  endpoints.rs  file_server.rs  lib.rs  main.rs  pages.rs  resources.rs  settings.rs  strings.rs  time_string.rs  utils.rs
src/database/: schema.rs
src/js/: form_handler.js
src/static/: form_handler.js  main.css  request.js
web/: main.css  request.js
