[package]
name = "confetti_box"
version = "0.1.2"
edition = "2021"

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
blake3 = { version = "1.5.4", features = ["mmap", "rayon", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
file-format = { version = "0.25.0", features = ["reader"] }
log = "0.4"
maud = { version = "0.26", features = ["rocket"] }
rand = "0.8.5"
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_with = { version = "3.11.0", features = ["chrono_0_4"] }
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4"] }

[profile.production]
inherits = "release"
lto = true
opt-level = "z"
codegen-units = 1
