[package]
name = "confetti_box"
version = "0.2.1"
repository = "https://github.com/Dangoware/confetti-box"
license = "AGPL-3.0-or-later"
authors.workspace = true
edition = "2024"
build = "build.rs"

[lints]
workspace = true

[dependencies]
blake3 = { version = "1.5", features = ["mmap", "rayon", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
file-format = { version = "0.26", features = ["reader"] }
log = "0.4"
maud = { version = "0.27", features = ["rocket"] }
rand = "0.8"
rocket = { version = "0.5", features = ["json"] }
rocket_ws = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.11", features = ["chrono_0_4"] }
toml = "0.8"
unidecode = "0.3"
urlencoding = "2.1"
uuid = { version = "1.11", features = ["serde", "v4"] }


[build-dependencies]
vergen-gix = { version = "1.0", features = ["build", "cargo", "rustc", "si"] }
