[package]
name = "confetti_cli"
version = "0.1.2"
description = "A simple command line interface to interact with a Confetti-Box instance."
repository = "https://github.com/Dangoware/confetti-box"
keywords = ["selfhost", "upload", "command_line"]
categories = ["command-line-utilities"]
authors.workspace = true
license = "AGPL-3.0-or-later"
edition = "2024"

[[bin]]
name = "imu"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "unicode"] }
directories = "6.0"
indicatif = { version = "0.17", features = ["improved_unicode"] }
owo-colors = { version = "4.1", features = ["supports-colors"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.41", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"
uuid = { version = "1.11", features = ["serde", "v4"] }
